Fix layout issue with comment input and button alignment

--- a/src/app/shared/components/comments/comments.component.scss
+++ b/src/app/shared/components/comments/comments.component.scss
@@ -15,10 +15,30 @@ h2[matSubheader] {
     display: flex;
     border-top: thin solid #555;
     padding-top: 10px;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
+    width: 100%; 
 }
 
 mat-form-field {
-    width: 90%;
+    width: 400px; 
+    min-width: 400px;
+    margin-right: 15px;
+}
+
+
+mat-icon {
+    font-size: 24px;
+    vertical-align: middle;
+}
+
+button[mat-icon-button] {
+    padding: 8px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 40px;
+    margin-bottom: 15px;
 }
